test/apps/basics/src/routes/errors/module-scope-client.svelte
<script context="module">
	if (typeof window !== 'undefined') {
		throw new Error('Crashing now');
	}
</script>
